2011-09-28  Matthew Mundell <matthew.mundell@greenbone.net>

	Add editing of My Settings.

	* src/gsad.c (init_validator, exec_omp_post, exec_omp_get): Add
	edit_my_settings and save_my_settings.

	* src/gsad_omp.c (get_my_settings, edit_my_settings)
	(edit_my_settings_omp, save_my_settings_omp): New function.
	(get_my_settings_omp): Call through to get_my_settings.

	* src/gsad_omp.h: Add headers accordingly.

	* src/html/omp.xsl (modify_settings_response, edit_my_settings): New
	templates.
	(my_settings): Remove.  Renamed to get_my_settings.
	(get_my_settings): New template.  Was my_settings.  Add edit icon.

2011-09-28  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_post): Initialise role and timezone in credentials.

2011-09-27  Matthew Mundell <matthew.mundell@greenbone.net>

	Add a My Settings page.

	* src/gsad.c (init_validator): Add get_my_settings to cmds.
	(exec_omp_get): Add get_my_settings.

	* src/gsad_oap.c (xsl_transform_oap): Add TIMEZONE to ENVELOPE.

	* src/gsad_omp.c (xsl_transform_oap): Add TIMEZONE to ENVELOPE.
	(get_my_settings_omp): New function.

	* src/gsad_omp.h: Add header accordingly.

	* src/html/gsad.xsl (html-gsa-logo): Link username to My Settings.
	(html-gsa-navigation): Add My Settings.
	(timezone): New template.

	* src/html/omp.xsl (my_settings): New template.

2011-09-27  Matthew Mundell <matthew.mundell@greenbone.net>

	Use the timezone given in the OMP AUTHENTICATE.  Store this timezone in
	the session.  Similarly for the user role, adding the role to the
	page header.

	* src/gsad_base.c (ctime_r_strip_newline): Use strftime to include
	timezone.

	* src/gsad_base.h (credentials_t): Add role and timezone.

	* src/gsad.c: Increase size of buffers passed to ctime_r_strip_newline.
	(struct user): Add role and timezone.
	(user_add): Add role and timezone args.
	(exec_omp_post): Pass role and timezone from authenticate_omp to user_add.