@@ -161,7 +161,7 @@ char * empty_trashcan_omp (credentials_t *, params_t *);
 
 char * edit_my_settings_omp (credentials_t *, params_t *);
 char * get_my_settings_omp (credentials_t *, params_t *);
-char * save_my_settings_omp (credentials_t *, params_t *);
+char * save_my_settings_omp (credentials_t *, params_t *, const char **);
 
 int authenticate_omp (const gchar *, const gchar *, gchar **, gchar **);
 
