@@ -1,3 +1,12 @@
+2011-09-29  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/gsad.c (user_set_timezone): New function.
+	(exec_omp_post): Update timezone after save_my_settings.
+
+	* src/gsad_omp.c (save_my_settings): Add timezone return arg.
+
+	* src/gsad_omp.h: Update header accordingly.
+
 2011-09-28  Matthew Mundell <matthew.mundell@greenbone.net>
 
 	Add editing of My Settings.
